<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.eineao.instablock.Activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blocked_apps_tab"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters_tab"/>

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <View
        android:visibility="invisible"
        android:id="@+id/fab_shade"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/lightTransparent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_addButtonColorPressed="@color/colorPrimaryDark"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:fab_labelStyle="@style/fab_labels_style"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="From Play Store"
            app:fab_icon="@drawable/ic_google_play"
            app:fab_colorNormal="@color/lightGrey"
            app:fab_colorPressed="@color/grey"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/installed_apps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_title="From Installed Apps"
            app:fab_icon="@drawable/ic_installed_apps"
            app:fab_colorNormal="@color/lightGrey"
            app:fab_colorPressed="@color/grey"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/filters_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fab_title="Add a Filter"
            app:fab_icon="@drawable/ic_add_filter"
            app:fab_colorNormal="@color/lightGrey"
            app:fab_colorPressed="@color/grey"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
